--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
     <script src="javascripts/Chart.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="javascripts/index.js" type="text/javascript" charset="utf-8"></script>
     <link href="stylesheets/style.css" rel="stylesheet" />
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+       var socket = io();
+       socket.on('data', function (data) {wsonmessage(data);});
+    </script>
 </head>
 
 <body>
