--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script>
        var socket = io();
-       socket.on('data', function (data) {wsonmessage(data);});
+       socket.on('data', wsonmessage);
     </script>
 </head>
 
